tests/baselines/reference/getJavaScriptSyntacticDiagnostics18.baseline
Syntactic Diagnostics for file '/tests/cases/fourslash/getJavaScriptSyntacticDiagnostics18.ts':
/tests/cases/fourslash/a.js(4,5): error TS8009: The 'public' modifier can only be used in TypeScript files.
/tests/cases/fourslash/b.js(2,8): error TS8010: Type annotations can only be used in TypeScript files.


==== /tests/cases/fourslash/a.js (1 errors) ====
    class C {
        x; // Regular property declaration allowed
        static y; // static allowed
        public z; // public not allowed
        ~~~~~~
!!! error TS8009: The 'public' modifier can only be used in TypeScript files.
    }
==== /tests/cases/fourslash/b.js (1 errors) ====
    class C {
        x: number; // Types not allowed
           ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    }